# schnorr_edu

./: .gitignore  Cargo.toml  README.md  bip_impl.py  build.rs  results  test-vectors.txt
benches/: my_benchmark.rs
examples/: precompute.rs  precompute_big_cache.rs  precompute_cache.rs  precompute_g_mul_cache.rs  precompute_medium_cache.rs
res/: bench_results_20180717  bench_results_20180719
src/: biguint.rs  cache.in  context.rs  doubles_cache.in  lib.rs  optimized_product.rs  point.rs  scalar.rs  signature.rs
src/alpha/: musig.rs
src/old/: mod.rs
src/point/: jacobian_point.rs  mod.rs  point.rs
src/scalar/: mod.rs  scalar_n.rs  scalar_p.rs
src/util/: apint.rs  mod.rs  rug.rs  shamir.rs  signature.rs  term.rs
